--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
   "dependencies": {
     "prop-types": "^15.6.0",
     "react": "15.4.2",
-    "react-dom": "15.4.2",
-    "uuid": "^3.1.0"
+    "react-dom": "15.4.2"
   }
 }
